# filetranster

./: CMakeLists.txt  FileTransfer.sln
FTransfer/: FTransfer.vcxproj  FTransfer.vcxproj.filters
client/: client.cpp  client.vcxproj
client/rcv/ts/: xiaomi_ts_20200606_930_1530
include/: file_transfer.h
lib/x64.Release/: client.ipdb  server.ipdb
server/: server.cpp  server.vcxproj
src/: file_info.h  file_transfer.cpp  file_transfer_connection.h  file_transfer_impl.cpp  file_transfer_impl.h
